[gd_scene load_steps=17 format=3 uid="uid://bvstqevcfopmi"]

[ext_resource type="Script" uid="uid://cnxldtua5jmtc" path="res://src/Battle/battle_scene.gd" id="1_8gkll"]
[ext_resource type="PackedScene" uid="uid://d16864y138ibj" path="res://assets/models/cellar.glb" id="1_hyoue"]
[ext_resource type="Script" uid="uid://dc1b3xjerwur5" path="res://src/Battle/turns.gd" id="2_f7wif"]
[ext_resource type="PackedScene" uid="uid://c54x7uopvayan" path="res://resources/scenes/enemy/baby_vine.tscn" id="2_wmfvw"]
[ext_resource type="PackedScene" uid="uid://cfr4u784045c3" path="res://resources/scenes/player/Player.tscn" id="3_f7wif"]
[ext_resource type="Theme" uid="uid://cqydt8lfb5sa6" path="res://resources/theme/paneltheme.tres" id="5_p1u18"]
[ext_resource type="Theme" uid="uid://dgw6rmwx6uf82" path="res://resources/theme/buttontexttheme.tres" id="6_qnt27"]
[ext_resource type="Texture2D" uid="uid://clvhwagbguxt7" path="res://assets/ui/button_normal.png" id="7_6wgge"]
[ext_resource type="Texture2D" uid="uid://bjv5t7emknwgu" path="res://assets/story/you.png" id="7_qnt27"]
[ext_resource type="Texture2D" uid="uid://boeypf5viofkf" path="res://assets/ui/button_click.png" id="8_8gkll"]
[ext_resource type="Texture2D" uid="uid://b8e5cy0lq3qqd" path="res://assets/ui/button_overr.png" id="9_i15re"]
[ext_resource type="Texture2D" uid="uid://cteivmbe87pur" path="res://assets/ui/button_disabled.png" id="10_px8tb"]
[ext_resource type="Texture2D" uid="uid://djtmi5m1gqdbd" path="res://assets/ui/carrot.png" id="12_6wgge"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p1u18"]
bg_color = Color(1, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qnt27"]
bg_color = Color(0, 0.635294, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6wgge"]
bg_color = Color(0, 0.6, 0, 0.498039)

[node name="BattleScene" type="Node3D"]
script = ExtResource("1_8gkll")

[node name="cellar" parent="." instance=ExtResource("1_hyoue")]

[node name="BattlessCamera" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.936403, 0.350927, 0, -0.350927, 0.936403, 1.37378, 0.820499, 1.52825)
current = true

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.52534, 4.59197, -3.28135)
visible = false
light_energy = 2.037
light_indirect_energy = 7.778
light_angular_distance = 27.29
sky_mode = 1

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.64263, 0.798607, -5.64182)
light_indirect_energy = 9.296
light_size = 1.37
omni_range = 691.238

[node name="OmniLight3D2" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.84366, 0.798607, -5.64182)
light_indirect_energy = 9.296
light_size = 1.37
omni_range = 691.238

[node name="OmniLight3D3" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.64263, 0.798607, 2.2381)
light_indirect_energy = 9.296
light_size = 1.37
omni_range = 691.238

[node name="OmniLight3D4" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.84366, 0.798607, 2.2381)
light_indirect_energy = 9.296
light_size = 1.37
omni_range = 691.238

[node name="Turns" type="Node" parent="." node_paths=PackedStringArray("playerLoc", "enemyLoc1", "enemyLoc2", "enemyLoc3", "enemyLoc4", "enemyLoc5", "attackbtn", "defendbtn", "fleebtn", "battleMenuQueue")]
script = ExtResource("2_f7wif")
playerLoc = NodePath("../PlayerLoc")
enemyLoc1 = NodePath("../EnemyLoc1")
enemyLoc2 = NodePath("../EnemyLoc2")
enemyLoc3 = NodePath("../EnemyLoc3")
enemyLoc4 = NodePath("../EnemyLoc4")
enemyLoc5 = NodePath("../EnemyLoc5")
attackbtn = NodePath("../BattleMenu/Attack")
defendbtn = NodePath("../BattleMenu/Defend")
fleebtn = NodePath("../BattleMenu/Run")
battleMenuQueue = NodePath("../BattleMenu/Queue/VBoxContainer")

[node name="PlayerLoc" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.61885, -1.38163, -3.42619)

[node name="Player" parent="PlayerLoc" instance=ExtResource("3_f7wif")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)
inAttackForm = true

[node name="EnemyLoc1" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.90121, -1.37829, -3.41626)

[node name="BabyVine" parent="EnemyLoc1" instance=ExtResource("2_wmfvw")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0826632, 0)
enemyName = "Baby Vine"
battleName = "Baby Vine"

[node name="EnemyLoc3" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.90121, -1.37829, -2.048)

[node name="EnemyLoc4" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.90121, -1.37829, -6.13531)

[node name="EnemyLoc5" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.90121, -1.37829, -0.6448)

[node name="EnemyLoc2" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.90121, -1.37829, -4.95337)

[node name="BattleMenu" type="CanvasLayer" parent="."]

[node name="Queue" type="Control" parent="BattleMenu"]
layout_mode = 3
anchors_preset = 0

[node name="VBoxContainer" type="VBoxContainer" parent="BattleMenu/Queue"]
layout_mode = 0
offset_left = 938.0
offset_top = 11.0
offset_right = 1143.0
offset_bottom = 336.0
theme_override_constants/separation = 10

[node name="Panel" type="Panel" parent="BattleMenu/Queue/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_vertical = 0
theme = ExtResource("5_p1u18")

[node name="ProgressBar" type="ProgressBar" parent="BattleMenu/Queue/VBoxContainer/Panel"]
layout_mode = 0
offset_left = 4.0
offset_top = 45.0
offset_right = 202.0
offset_bottom = 49.0
theme_override_styles/background = SubResource("StyleBoxFlat_p1u18")
theme_override_styles/fill = SubResource("StyleBoxFlat_qnt27")
fill_mode = 1
show_percentage = false

[node name="Label" type="Label" parent="BattleMenu/Queue/VBoxContainer/Panel"]
layout_mode = 2
offset_left = 6.0
offset_top = 5.0
offset_right = 197.0
offset_bottom = 49.0
theme = ExtResource("6_qnt27")
text = "Attack"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="BattleMenu/Queue/VBoxContainer/Panel"]
layout_mode = 0
offset_left = 167.0
offset_top = -7.0
offset_right = 207.0
offset_bottom = 33.0
texture = ExtResource("7_qnt27")
expand_mode = 1

[node name="ProgressBar" type="ProgressBar" parent="BattleMenu/Queue/VBoxContainer/Panel/TextureRect"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_styles/fill = SubResource("StyleBoxFlat_6wgge")
value = 59.0
fill_mode = 3
show_percentage = false

[node name="Panel2" type="Panel" parent="BattleMenu/Queue/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_vertical = 0
theme = ExtResource("5_p1u18")

[node name="ProgressBar" type="ProgressBar" parent="BattleMenu/Queue/VBoxContainer/Panel2"]
layout_mode = 0
offset_left = 4.0
offset_top = 45.0
offset_right = 202.0
offset_bottom = 49.0
theme_override_styles/background = SubResource("StyleBoxFlat_p1u18")
theme_override_styles/fill = SubResource("StyleBoxFlat_qnt27")
fill_mode = 1
show_percentage = false

[node name="Label" type="Label" parent="BattleMenu/Queue/VBoxContainer/Panel2"]
layout_mode = 2
offset_left = 6.0
offset_top = 5.0
offset_right = 197.0
offset_bottom = 49.0
theme = ExtResource("6_qnt27")
text = "Attack"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="BattleMenu/Queue/VBoxContainer/Panel2"]
layout_mode = 0
offset_left = 167.0
offset_top = -7.0
offset_right = 207.0
offset_bottom = 33.0
texture = ExtResource("7_qnt27")
expand_mode = 1

[node name="ProgressBar" type="ProgressBar" parent="BattleMenu/Queue/VBoxContainer/Panel2/TextureRect"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_styles/fill = SubResource("StyleBoxFlat_6wgge")
value = 59.0
fill_mode = 3
show_percentage = false

[node name="Panel3" type="Panel" parent="BattleMenu/Queue/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_vertical = 0
theme = ExtResource("5_p1u18")

[node name="ProgressBar" type="ProgressBar" parent="BattleMenu/Queue/VBoxContainer/Panel3"]
layout_mode = 0
offset_left = 4.0
offset_top = 45.0
offset_right = 202.0
offset_bottom = 49.0
theme_override_styles/background = SubResource("StyleBoxFlat_p1u18")
theme_override_styles/fill = SubResource("StyleBoxFlat_qnt27")
fill_mode = 1
show_percentage = false

[node name="Label" type="Label" parent="BattleMenu/Queue/VBoxContainer/Panel3"]
layout_mode = 2
offset_left = 6.0
offset_top = 5.0
offset_right = 197.0
offset_bottom = 49.0
theme = ExtResource("6_qnt27")
text = "Attack"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="BattleMenu/Queue/VBoxContainer/Panel3"]
layout_mode = 0
offset_left = 167.0
offset_top = -7.0
offset_right = 207.0
offset_bottom = 33.0
texture = ExtResource("7_qnt27")
expand_mode = 1

[node name="ProgressBar" type="ProgressBar" parent="BattleMenu/Queue/VBoxContainer/Panel3/TextureRect"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_styles/fill = SubResource("StyleBoxFlat_6wgge")
value = 59.0
fill_mode = 3
show_percentage = false

[node name="Panel4" type="Panel" parent="BattleMenu/Queue/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_vertical = 0
theme = ExtResource("5_p1u18")

[node name="ProgressBar" type="ProgressBar" parent="BattleMenu/Queue/VBoxContainer/Panel4"]
layout_mode = 0
offset_left = 4.0
offset_top = 45.0
offset_right = 202.0
offset_bottom = 49.0
theme_override_styles/background = SubResource("StyleBoxFlat_p1u18")
theme_override_styles/fill = SubResource("StyleBoxFlat_qnt27")
fill_mode = 1
show_percentage = false

[node name="Label" type="Label" parent="BattleMenu/Queue/VBoxContainer/Panel4"]
layout_mode = 2
offset_left = 6.0
offset_top = 5.0
offset_right = 197.0
offset_bottom = 49.0
theme = ExtResource("6_qnt27")
text = "Attack"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="BattleMenu/Queue/VBoxContainer/Panel4"]
layout_mode = 0
offset_left = 167.0
offset_top = -7.0
offset_right = 207.0
offset_bottom = 33.0
texture = ExtResource("7_qnt27")
expand_mode = 1

[node name="ProgressBar" type="ProgressBar" parent="BattleMenu/Queue/VBoxContainer/Panel4/TextureRect"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_styles/fill = SubResource("StyleBoxFlat_6wgge")
value = 59.0
fill_mode = 3
show_percentage = false

[node name="Panel5" type="Panel" parent="BattleMenu/Queue/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_vertical = 0
theme = ExtResource("5_p1u18")

[node name="ProgressBar" type="ProgressBar" parent="BattleMenu/Queue/VBoxContainer/Panel5"]
layout_mode = 0
offset_left = 4.0
offset_top = 45.0
offset_right = 202.0
offset_bottom = 49.0
theme_override_styles/background = SubResource("StyleBoxFlat_p1u18")
theme_override_styles/fill = SubResource("StyleBoxFlat_qnt27")
fill_mode = 1
show_percentage = false

[node name="Label" type="Label" parent="BattleMenu/Queue/VBoxContainer/Panel5"]
layout_mode = 2
offset_left = 6.0
offset_top = 5.0
offset_right = 197.0
offset_bottom = 49.0
theme = ExtResource("6_qnt27")
text = "Attack"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="BattleMenu/Queue/VBoxContainer/Panel5"]
layout_mode = 0
offset_left = 167.0
offset_top = -7.0
offset_right = 207.0
offset_bottom = 33.0
texture = ExtResource("7_qnt27")
expand_mode = 1

[node name="ProgressBar" type="ProgressBar" parent="BattleMenu/Queue/VBoxContainer/Panel5/TextureRect"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_styles/fill = SubResource("StyleBoxFlat_6wgge")
value = 59.0
fill_mode = 3
show_percentage = false

[node name="Panel6" type="Panel" parent="BattleMenu/Queue/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_vertical = 0
theme = ExtResource("5_p1u18")

[node name="ProgressBar" type="ProgressBar" parent="BattleMenu/Queue/VBoxContainer/Panel6"]
layout_mode = 0
offset_left = 4.0
offset_top = 45.0
offset_right = 202.0
offset_bottom = 49.0
theme_override_styles/background = SubResource("StyleBoxFlat_p1u18")
theme_override_styles/fill = SubResource("StyleBoxFlat_qnt27")
fill_mode = 1
show_percentage = false

[node name="Label" type="Label" parent="BattleMenu/Queue/VBoxContainer/Panel6"]
layout_mode = 2
offset_left = 6.0
offset_top = 5.0
offset_right = 197.0
offset_bottom = 49.0
theme = ExtResource("6_qnt27")
text = "Attack"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="BattleMenu/Queue/VBoxContainer/Panel6"]
layout_mode = 0
offset_left = 167.0
offset_top = -7.0
offset_right = 207.0
offset_bottom = 33.0
texture = ExtResource("7_qnt27")
expand_mode = 1

[node name="ProgressBar" type="ProgressBar" parent="BattleMenu/Queue/VBoxContainer/Panel6/TextureRect"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_styles/fill = SubResource("StyleBoxFlat_6wgge")
value = 59.0
fill_mode = 3
show_percentage = false

[node name="Attack" type="TextureButton" parent="BattleMenu"]
offset_left = 25.0
offset_top = 452.0
offset_right = 207.0
offset_bottom = 509.0
texture_normal = ExtResource("7_6wgge")
texture_pressed = ExtResource("8_8gkll")
texture_hover = ExtResource("9_i15re")
texture_disabled = ExtResource("10_px8tb")
ignore_texture_size = true
stretch_mode = 4

[node name="Label" type="Label" parent="BattleMenu/Attack"]
layout_mode = 0
offset_left = 50.0
offset_top = 12.0
offset_right = 134.0
offset_bottom = 35.0
theme = ExtResource("6_qnt27")
text = "Attack"

[node name="Defend" type="TextureButton" parent="BattleMenu"]
offset_left = 23.0
offset_top = 513.0
offset_right = 206.0
offset_bottom = 566.0
texture_normal = ExtResource("7_6wgge")
texture_pressed = ExtResource("8_8gkll")
texture_hover = ExtResource("9_i15re")
texture_disabled = ExtResource("10_px8tb")
ignore_texture_size = true
stretch_mode = 4

[node name="Label" type="Label" parent="BattleMenu/Defend"]
layout_mode = 0
offset_left = 49.0
offset_top = 11.0
offset_right = 133.0
offset_bottom = 34.0
theme = ExtResource("6_qnt27")
text = "Defend"

[node name="Run" type="TextureButton" parent="BattleMenu"]
offset_left = 23.0
offset_top = 575.0
offset_right = 206.0
offset_bottom = 628.0
texture_normal = ExtResource("7_6wgge")
texture_pressed = ExtResource("8_8gkll")
texture_hover = ExtResource("9_i15re")
texture_disabled = ExtResource("10_px8tb")
ignore_texture_size = true
stretch_mode = 4

[node name="Label" type="Label" parent="BattleMenu/Run"]
layout_mode = 0
offset_left = 62.0
offset_top = 12.0
offset_right = 146.0
offset_bottom = 35.0
theme = ExtResource("6_qnt27")
text = "Run"

[node name="Result" type="CanvasLayer" parent="."]
visible = false

[node name="Panel" type="Panel" parent="Result"]
offset_left = 268.0
offset_top = 70.0
offset_right = 863.0
offset_bottom = 516.0
theme = ExtResource("5_p1u18")

[node name="Label" type="Label" parent="Result/Panel"]
layout_mode = 0
offset_left = 237.0
offset_top = 31.0
offset_right = 335.0
offset_bottom = 52.0
theme = ExtResource("6_qnt27")
text = "VICTORY"

[node name="Line2D" type="Line2D" parent="Result/Panel"]
points = PackedVector2Array(88, 63, 444, 63)
default_color = Color(0.0415072, 0.0415072, 0.0415072, 1)

[node name="Name2" type="Label" parent="Result/Panel"]
layout_mode = 0
offset_left = 87.0
offset_top = 81.0
offset_right = 516.0
offset_bottom = 136.0
theme_override_font_sizes/font_size = 25
text = "The folling ingredients have been added to your inventory"
autowrap_mode = 2

[node name="TextureRect" type="TextureRect" parent="Result/Panel"]
layout_mode = 0
offset_left = 81.0
offset_top = 172.0
offset_right = 154.0
offset_bottom = 253.0
texture = ExtResource("12_6wgge")
expand_mode = 1
stretch_mode = 4

[node name="Name" type="Label" parent="Result/Panel/TextureRect"]
layout_mode = 0
offset_left = 60.0
offset_top = 3.0
offset_right = 152.0
offset_bottom = 29.0
theme_override_font_sizes/font_size = 25
text = "Carrot"

[node name="amount" type="Label" parent="Result/Panel/TextureRect"]
layout_mode = 0
offset_left = 63.0
offset_top = 41.0
offset_right = 155.0
offset_bottom = 67.0
theme_override_font_sizes/font_size = 25
text = "1"

[node name="Button" type="Button" parent="Result/Panel"]
layout_mode = 0
offset_left = 547.0
offset_top = 396.0
offset_right = 565.0
offset_bottom = 427.0
text = "X"

[connection signal="battle_end" from="Turns" to="." method="_on_turns_battle_end"]
[connection signal="pressed" from="BattleMenu/Attack" to="Turns" method="_on_attack_pressed"]
[connection signal="pressed" from="Result/Panel/Button" to="." method="_on_button_pressed"]
